--- a/.github/workflows/marp-to-pages.yml
+++ b/.github/workflows/marp-to-pages.yml
@@ -23,7 +23,7 @@ jobs:
         run: mkdir build && cp -R img build/img
 
       - name: Marp Build (README)
-        uses: docker://marpteam/marp-cli:v1.7.0
+        uses: docker://marpteam/marp-cli:latest
         with:
           args: README.md -o build/index.html
         env:
